--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,41 +8,43 @@ trigger:
     include:
       - "*"
 
-jobs:
-- job:
-  displayName: "amd64"
-  pool:
-    vmImage: 'ubuntu-20.04'
+parameters:
+  - name: debian_version
+    type: string
+    default: bullseye
 
-  container:
-    image: sonicdev-microsoft.azurecr.io:443/sonic-slave-bullseye:latest
+variables:
+  - name: BUILD_BRANCH
+    ${{ if eq(variables['Build.Reason'], 'PullRequest') }}:
+      value: $(System.PullRequest.TargetBranch)
+    ${{ else }}:
+      value: $(Build.SourceBranchName)
 
-  steps:
-  - script: |
-      sudo apt-get update
-      sudo apt-get install -y make libboost-all-dev libgtest-dev build-essential
-    displayName: "Install dependencies"
-  - task: DownloadPipelineArtifact@2
-    inputs:
-      source: specific
-      project: build
-      pipeline: Azure.sonic-buildimage.common_libs
-      artifact: common-lib
-      runVersion: 'latestFromBranch'
-      runBranch: 'refs/heads/master'
-      path: $(Build.ArtifactStagingDirectory)/download
-      patterns: |
-        target/debs/bullseye/libprotobuf*.deb
-        target/debs/bullseye/libprotoc*.deb
-        target/debs/bullseye/protobuf-compiler*.deb
-  - script: |
-      sudo dpkg -i $( find download -type f -name '*.deb' )
-    workingDirectory: $(Build.ArtifactStagingDirectory)
-    displayName: "Install protobuf"
-  - script: |
-      mkdir -p package
-      dpkg-buildpackage -rfakeroot -us -uc -b -j$(nproc)
-      cp ../*.deb package/
-    displayName: "Build sonic-dash-api"
-  - publish: $(System.DefaultWorkingDirectory)/package
-    artifact: sonic-dash-api
+stages:
+- stage: Build
+  jobs:
+  - template: .azure-pipelines/build-template.yml
+    parameters:
+      arch: amd64
+      pool: sonicbld
+      sonic_slave: sonic-slave-${{ parameters.debian_version }}
+      debian_version: ${{ parameters.debian_version }}
+      artifact_name: sonic-dash-api
+- stage: BuildArm
+  dependsOn: Build
+  condition: succeeded('Build')
+  jobs:
+  - template: .azure-pipelines/build-template.yml
+    parameters:
+      arch: armhf
+      pool: sonicbld-armhf
+      sonic_slave: sonic-slave-${{ parameters.debian_version }}-armhf
+      debian_version: ${{ parameters.debian_version }}
+      artifact_name: sonic-dash-api.armhf
+  - template: .azure-pipelines/build-template.yml
+    parameters:
+      arch: arm64
+      pool: sonicbld-arm64
+      sonic_slave: sonic-slave-${{ parameters.debian_version }}-arm64
+      debian_version: ${{ parameters.debian_version }}
+      artifact_name: sonic-dash-api.arm64
