[misc]: Add utils CLI (#12)
Provide a CLI for transformation between json and protobuf. The following is an example of using this CLI.

root@vlab-01:/# redis-cli --raw -p 6381 -n 15 hget "DASH_APPLIANCE_TABLE:123"  "pb" | dash_api_utils --table_name DASH_APPLIANCE_TABLE
{
 "sip": {
  "ipv4": 16777482
 },
 "vm_vni": 4321
}

root@vlab-01:/# redis-cli --raw -p 6381 -n 15 hget "DASH_ROUTE_TABLE:F4939FEFC47E:20.2.2.0/24"  "pb" | dash_api_utils --table_name DASH_ROUTE_TABLE
{
 "action_type": "ROUTING_TYPE_VNET",
 "vnet": "Vnet2"
}

root@vlab-01:/# redis-cli --raw -p 6381 -n 15 hget "DASH_ROUTE_RULE_TABLE:F4939FEFC47E:2000:10.0.0.0/24"  "pb" | dash_api_utils --table_name DASH_ROUTE_RULE_TABLE
{
 "action_type": "ROUTING_TYPE_VNET_ENCAP",
 "priority": 1,
 "vnet": "Vnet2",
 "pa_validation": true
}

---------

Signed-off-by: Ze Gan <ganze718@gmail.com>

--- a/misc/.gitignore
+++ b/misc/.gitignore
@@ -1,2 +1,9 @@
-pypkg/*_pb2.py
+pypkg/**/*
+!pypkg/dash_api
+!pypkg/dash_api/__init__.py
 tests/test
+**/__pycache__/*
+*.so
+_*.*
+*_wrap.cxx
+*.bin
