[build]Update pool sonicbld to sonic-ububtu-1c since it's deprecated

--- a/.azure-pipelines/build-template.yml
+++ b/.azure-pipelines/build-template.yml
@@ -10,7 +10,7 @@ parameters:
 - name: pool
   type: string
   values:
-  - sonicbld
+  - sonic-ubuntu-1c
   - sonicbld-armhf
   - sonicbld-arm64
   - default
