--- a/.azure-pipelines/build-template.yml
+++ b/.azure-pipelines/build-template.yml
@@ -10,7 +10,7 @@ parameters:
 - name: pool
   type: string
   values:
-  - sonic-ubuntu-1c
+  - sonicbld-1es
   - sonicbld-armhf
   - sonicbld-arm64
   - default
