--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 proto/*
 !proto/*.proto
 **/build/*
+
+debian/.debhelper/*
+debian/debhelper-build-stamp
+debian/files
+debian/libdashapi.substvars
+debian/libdashapi
