--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,11 @@ Source: sonic
 Maintainer: Ze Gan <zegan@microsoft.com>
 Section: net
 Priority: optional
-Build-Depends: dh-exec (>=0.3), debhelper (>= 12), autotools-dev,
+Build-Depends: debhelper (>= 12), protobuf-compiler (>=3.21.12), libprotobuf-dev (>=3.21.12)
 Standards-Version: 1.0.0
 
 Package: libdashapi
 Architecture: any
-Build-Depends: protobuf-compiler (>=3.21.12), libprotobuf-dev (>=3.21.12)
-Depends: libprotobuf32 (>=3.21.12), libprotobuf-lite32 (>=3.21.12)
+Depends: ${shlibs:Depends}, ${misc:Pre-Depends}
 Section: libs
 Description: DASH API definition for the SONiC project.
