--- a/.azure-pipelines/build-template.yml
+++ b/.azure-pipelines/build-template.yml
@@ -40,10 +40,12 @@ jobs:
 
   steps:
   - script: |
+      set -e
       sudo apt-get update
       sudo apt-get install -y make libboost-all-dev libgtest-dev build-essential swig4.0
     displayName: "Install dependencies"
   - script: |
+      set -e
       mkdir -p package
       dpkg-buildpackage -rfakeroot -us -uc -b -j$(nproc)
       cp ../*.deb package/
