--- a/.azure-pipelines/build-template.yml
+++ b/.azure-pipelines/build-template.yml
@@ -16,9 +16,6 @@ parameters:
   - default
   default: default
 
-- name: sonic_slave
-  type: string
-
 - name: debian_version
   type: string
   default: bookworm
@@ -36,13 +33,13 @@ jobs:
       vmImage: 'ubuntu-24.04'
 
   container:
-    image: sonicdev-microsoft.azurecr.io:443/${{ parameters.sonic_slave }}:latest
+    image: sonicdev-microsoft.azurecr.io:443/sonic-slave-${{ parameters.debian_version }}:$(BUILD_BRANCH)-${{ parameters.arch }}
 
   steps:
   - script: |
       set -e
       sudo apt-get update
-      sudo apt-get install -y make libboost-all-dev libgtest-dev build-essential swig4.0
+      sudo apt-get install -y make libboost1.83-all-dev libgtest-dev build-essential swig4.0
     displayName: "Install dependencies"
   - script: |
       set -e
