Add step to compile Trixie in the CI builds
This will be required for compiling swss with Trixie in the CI builds
for that repo.

Signed-off-by: Saikrishna Arcot <sarcot@microsoft.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,3 +71,25 @@ stages:
       pool: sonicso1ES-arm64
       debian_version: ${{ parameters.debian_version }}
       artifact_name: sonic-dash-api.arm64
+- stage: BuildTrixie
+  dependsOn: BuildArm
+  condition: succeeded('BuildArm')
+  jobs:
+  - template: .azure-pipelines/build-template.yml
+    parameters:
+      arch: amd64
+      pool: sonicso1ES-amd64
+      debian_version: trixie
+      artifact_name: sonic-dash-api-trixie
+  - template: .azure-pipelines/build-template.yml
+    parameters:
+      arch: armhf
+      pool: sonicso1ES-armhf
+      debian_version: trixie
+      artifact_name: sonic-dash-api-trixie.armhf
+  - template: .azure-pipelines/build-template.yml
+    parameters:
+      arch: arm64
+      pool: sonicso1ES-arm64
+      debian_version: trixie
+      artifact_name: sonic-dash-api-trixie.arm64
